compiler/tests/en/errors/match_duplicate_pattern.salam
// EXPECT: E078
enum Color:
    red
    green
end

func main:
    c := Color.red
    match c:
        red: println "r1" end
        red: println "r2" end
        else: println "other" end
    end
end
